# legend-ai

./: .cursorrules  .gitignore  BROWSER_CONSOLE_TEST.md  CHANGELOG_AUTOPILOT.md  CORRECT_DATABASE_FIX.md  DASHBOARD_ENHANCEMENT_PLAN.md  DASHBOARD_FIXED.md  DATABASE_ISSUE.md  DEPLOYMENT_PROGRESS.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STATUS_FINAL.md  DEPLOY_GUIDE.md  Dockerfile.api  Dockerfile.production  Dockerfile.scheduler  Dockerfile.worker  ENV.md  FEATURES_IMPLEMENTED.md  FINAL_FIX_APPLIED.md  FIX_RENDER_REPO.md  FIX_VERCEL_DASHBOARD.md  FORCE_RESTART_INSTRUCTIONS.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_SUCCESS.md  MONITORING_DEPLOYMENT.md  MORNING_BRIEFING.md  Makefile  OVERNIGHT_STATUS_REPORT.md  PRODUCTION_READINESS_20250919_0007.md  README.md  REDEPLOY_NEEDED.md  RENDER_CONFIG.md  RENDER_SSL_FIX.md  RENDER_UPDATE_INSTRUCTIONS.md  RUN_MIGRATION.md  SHIP_IT_NOW.md  SLIDERS_FIXED.md  SUCCESS_STATUS.md  TODO_AUTOPILOT.md  VALIDATION.md  (+56 more)
.orchestrator/: journal.jsonl
app/: cache.py  (+8 more)
legend-room-backend/: .env.example  .gitignore  Dockerfile  README.md  chart_engine.py  demo.py  pyproject.toml  requirements.txt  scanner.py  scanner_utils.py
legend-room-backend/.venv_ci/: pyvenv.cfg
legend-room-backend/docs/: PHASE2_MARKER.txt
legend-room-backend/legend-room-backend/.github/workflows/: ci.yml
legend-room-backend/src/legend_room_backend/: main.py
legend-room-backend/src/legend_room_backend/core/: config.py
legend-room-backend/src/legend_room_backend/db/: database.py  models.py
legend-room-backend/tests/: conftest.py  test_health.py  test_price_contract.py
(+180 files in other folders)
